--- a/backend/functions/gmail_fetch/requirements.txt
+++ b/backend/functions/gmail_fetch/requirements.txt
@@ -1,5 +1,7 @@
 # === gmail_fetch/requirements.txt ===
 Flask==2.3.2
+Flask-CORS==4.0.0
+gunicorn==21.2.0
 google-cloud-firestore==2.13.0
 google-auth==2.29.0
 google-auth-oauthlib==1.2.0
