Fix cloudbuild.yaml formatting

--- a/backend/dbt/cloudbuild.yaml
+++ b/backend/dbt/cloudbuild.yaml
@@ -1,21 +1,19 @@
 # backend/dbt/cloudbuild.yaml
 steps:
-  - id: "Install dbt"
-    name: "python:3.9-slim"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        pip install dbt-bigquery
+- id: "Install dbt"
+  name: "python:3.9-slim"
+  entrypoint: bash
+  args:
+    - "-c"
+    - |
+      pip install dbt-bigquery
 
-  - id: "Run dbt"
-    name: "python:3.9-slim"
-    entrypoint: bash
-    # Since this file is in backend/dbt/, the workspace root is onlyjobs/,
-    # but Cloud Build will chdir into the folder containing your cloudbuild.yaml,
-    # so "." here is backend/dbt/
-    dir: "."  
-    args:
-      - "-c"
-      - |
-        dbt run --profiles-dir . --target dev
+- id: "Run dbt"
+  name: "python:3.9-slim"
+  entrypoint: bash
+  dir: "."            # relative to where cloudbuild.yaml lives (backend/dbt/)
+  args:
+    - "-c"
+    - |
+      dbt run --profiles-dir . --target dev
+
