--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,5 +54,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "http-proxy-middleware": "^3.0.5"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
